--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,3 +1,4 @@
+
 body {
     display: flex;
     flex-direction: row;
@@ -42,6 +43,43 @@ main {
     text-align: justify;
 }
 
+@media (min-width: 1024px) {
+
+    .contacto h1 {
+        font-size: 2.5rem;
+    }
+
+    .principal h2 {
+        font-size: 3rem;
+    
+    }
+    
+    .principal h3 {
+        font-size: 2.2rem;
+        font-display: auto;
+    }
+
+    ul li {
+        font-size: 1.8rem;
+    }
+
+    .container_title {
+        font-size: 1.8rem;
+    }
+
+    h3 {
+        font-size: 2.2rem;
+    }
+
+    .title_description {
+        font-size: 2rem;
+    }
+
+    .description {
+        font-size: 1.5rem;
+    }
+    
+}
 .talleres {
     width: 50%;
     height: 110vh;
@@ -54,6 +92,4 @@ main {
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    border-top: 2px solid var(--negro);
-    background: var(--amarijoJS);
 }
