--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,11 @@ html {
     font-family:'Times New Roman', Times, serif;
 }
 
+p, li {
+    font-size: 1.9rem;
+}
+
+
 header {
     width: 100%;
     height: 100px;
@@ -29,8 +34,8 @@ header {
 }
 
 .jsChallengeLogo {
-    width: 50px;
-    margin-left: 20px;
+    width: 60px;
+    margin: 20px;
 }
 
 .platziLogo {
@@ -43,7 +48,6 @@ header {
 .contacto {
     display: flex;
     align-items: center;
-    margin-left: 40px;
 }
 
 .contacto h1 {
@@ -122,7 +126,7 @@ ul li {
 
 .containerTaller {
     width: 100%;
-    height: 65px;
+    height: 90px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -132,6 +136,7 @@ ul li {
 }
 
 .containerTaller:hover {
+    transition-duration: 0.5s;
     transform: scale(1.1);
 }
 
@@ -163,6 +168,5 @@ ul li {
 .invertir {
     filter: invert(1);
 }
-
 
 
