--- a/css/tablet.css
+++ b/css/tablet.css
@@ -90,6 +90,10 @@ main {
     height: calc(110vh/4);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     flex-direction: row;
+}
+
+.containerTaller img {
+    margin-left: 35px;
 }
