--- a/PromedioMedianaModa/caculos.css
+++ b/PromedioMedianaModa/caculos.css
@@ -26,11 +26,14 @@ section{
     flex-direction: column;
     align-items: center;
     padding-top: 15px;
-    background-color: white;
+    background-image: url('https://geekflare.com/wp-content/uploads/2021/10/data-wrangling.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 section h2 {
     font-size: 2rem;
+    color: white;
 }
 
 form {
@@ -47,6 +50,11 @@ form {
     border: 1px solid rgb(45, 105, 233);
     padding: 20px 0px 30px;
     margin-top: 20px;
+    background-color: white;
+}
+
+form div {
+    text-align: justify;
 }
 
 label {
@@ -81,4 +89,68 @@ form p {
     font-size: 1.6rem;
     font-weight: 450;
     color:rgb(23, 75, 160);
+}
+
+footer {
+    width: 100%;
+    height: 90px;
+    margin: 20px 0px 0px;
+    text-align: center;
+    background: rgb(45, 105, 233);
+    display: flex;
+    justify-content: center;
+}
+
+footer h3 {
+    font-size: 1.9rem;
+    color: white;
+    font-weight: 800;
+}
+
+ul {
+    list-style: none;
+    margin-bottom: -10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+li {
+    margin-left: 30px;
+}
+li a {
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+.icon{
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    margin: 0px 5px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    top: 5px;
+}
+
+.twitter{
+    background-image: url('https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Ficons.iconarchive.com%2Ficons%2Fiynque%2Fios7-style%2F1024%2FTwitter-icon.png&f=1&nofb=1');
+}
+
+.instagram {
+    background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fchaminade.edu%2Fwp-content%2Fuploads%2F2019%2F08%2FInstagram-Icon-color.png&f=1&nofb=1');
+}
+.git{
+    background-image: url('https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fpngimg.com%2Fuploads%2Fgithub%2Fgithub_PNG40.png&f=1&nofb=1');
 }
